<resources>
    <string name="app_name">CyclingHelper</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="food">Food</string>
    <string name="don_t_forget_your">Don\'t Forget Your:</string>
    <string name="helmet">Helmet</string>
    <string name="mask">Mask</string>
    <string name="phone">Phone</string>
    <string name="don_t_forget_your1">Don\'t Forget Your:</string>
    <string name="helmet1">Helmet</string>
    <string name="gloves1">Gloves</string>
    <string name="bottles1">Bottles</string>
    <string name="sunglasses1">Sunglasses</string>
    <string name="mask1">Mask</string>
    <string name="phone1">Phone</string>
    <string name="food1">Food</string>
    <string name="id">ID</string>
    <string name="don_t_forget_your2">Don\'t Forget Your:</string>
    <string name="money1">Money</string>
    <string name="okey">Okey</string>
    <string name="napkin2">Napkin</string>
    <string name="how_many_km_s_today">How many km\'s today? :)</string>
    <string name="enter">enter</string>
    <string name="check">check</string>
    <string name="month">MONTH</string>
    <string name="year">YEAR</string>
    <string name="week">WEEK</string>
    <string name="km">KM:</string>
    <string name="day">DAY</string>
    <string name="don_t_forget_your3">Don\'t Forget Your:</string>
    <string name="weather">TextView</string>
    <string name="monday1">Monday</string>
    <string name="tuesday2">Tuesday</string>
    <string name="wednesday2">Wednesday</string>
    <string name="thursday2">Thursday</string>
    <string name="saturday2">Saturday</string>
    <string name="friday2">Friday</string>
    <string name="sunday2">Sunday</string>
    <string name="save">Save</string>
    <string name="current_goals">Current Goals:</string>
    <string name="new_goal">NEW GOAL:</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="create">Create</string>
    <string name="km1">km:</string>
    <string name="plan_of_the_week">Plan of the Week:</string>
    <string name="saved">Saved</string>
    <string name="stats">total km:</string>
    <string name="goals_stats">Goal Status: </string>
</resources>