<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF00B0FF"
    tools:context=".ui.home.HomeFragment">

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/sunglasses1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkBox5"
        app:layout_constraintEnd_toStartOf="@+id/checkBox4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/gloves1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/helmet1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkBox3"
        app:layout_constraintEnd_toStartOf="@+id/checkBox2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/bottles1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkBox6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/mask1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkBox7"
        app:layout_constraintEnd_toStartOf="@+id/checkBox6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/food1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkBox12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBox5"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/phone1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkBox9"
        app:layout_constraintEnd_toStartOf="@+id/checkBox12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/money1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBox9"
        app:layout_constraintTop_toBottomOf="@+id/checkBox12" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/napkin2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/checkBox8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox7" />

    <CheckBox
        android:id="@+id/checkBox12"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/id"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkBox8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBox7"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="179dp"
        android:layout_height="118dp"
        android:text="@string/weather"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.034" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="212dp"
        android:background="#E9036FC5"
        android:text="@string/check"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="344dp"
        android:layout_height="23dp"
        android:text="@string/how_many_km_s_today"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="124dp"
        android:layout_height="40dp"
        android:layout_marginBottom="128dp"
        android:ems="10"
        android:hint="@string/km"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#E9036FC5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:layout_marginBottom="128dp"
        android:background="#E9036FC5"
        android:text="@string/enter"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="147dp"
        android:layout_height="141dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:src="@mipmap/atmosphere"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:text="@string/don_t_forget_your3"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>