<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B0FF"
    tools:context=".ui.notifications.NotificationsFragment">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/switch2"
        app:layout_constraintEnd_toStartOf="@+id/switch6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.615" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesday2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/switch3"
        app:layout_constraintEnd_toStartOf="@+id/switch7"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/switch7" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesday2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/switch4"
        app:layout_constraintEnd_toStartOf="@+id/editTextTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/switch5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/switch3" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="106dp"
        android:layout_height="27dp"
        android:text="@string/friday2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <Switch
        android:id="@+id/switch6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/switch7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Switch
        android:id="@+id/switch7"
        android:layout_width="100dp"
        android:layout_height="26dp"
        android:text="@string/sunday2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/switch6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="107dp"
        android:layout_height="218dp"
        android:layout_marginTop="28dp"
        android:text="@string/plan_of_the_week"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/switch5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E9036FC5"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/switch4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="99dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="ab:cd (24h)"
        android:inputType="time"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/switch7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="179dp"
        android:layout_height="317dp"
        android:layout_marginTop="68dp"
        android:text="@string/current_goals"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="86dp"
        android:layout_height="31dp"
        android:text="@string/weekly"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkBox11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <CheckBox
        android:id="@+id/checkBox11"
        android:layout_width="96dp"
        android:layout_height="30dp"
        android:text="@string/monthly"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkBox13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/checkBox10" />

    <CheckBox
        android:id="@+id/checkBox13"
        android:layout_width="86dp"
        android:layout_height="30dp"
        android:text="@string/yearly"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/checkBox11" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="107dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/km"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/checkBox13" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E9036FC5"
        android:text="@string/create"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

</androidx.constraintlayout.widget.ConstraintLayout>