<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF00B0FF"
    tools:context=".ui.dashboard.DashboardFragment">

    <CalendarView
        android:id="@+id/calendarView2"
        android:layout_width="319dp"
        android:layout_height="294dp"
        android:background="#E9036FC5"
        android:focusedMonthDateColor="#FFFFFF"
        android:selectedWeekBackgroundColor="#000000"
        android:showWeekNumber="false"
        android:soundEffectsEnabled="true"
        android:unfocusedMonthDateColor="#000000"
        android:weekNumberColor="#FFFFFF"
        android:weekSeparatorLineColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        tools:visibility="visible" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:text="@string/week"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/radioButton2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioButton4"
        app:layout_constraintTop_toBottomOf="@+id/calendarView2" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:text="@string/year"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/radioButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioButton2"
        app:layout_constraintTop_toTopOf="@+id/radioButton2" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width = "90dp"
        android:layout_height="30dp"
        android:text="@string/month"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/radioButton"
        app:layout_constraintEnd_toStartOf="@+id/radioButton3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioButton"
        app:layout_constraintTop_toTopOf="@+id/radioButton" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/day"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/radioButton"
        app:layout_constraintEnd_toStartOf="@+id/radioButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioButton" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="345dp"
        android:layout_height="136dp"
        android:layout_marginTop="88dp"
        android:text="@string/stats"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView2"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="338dp"
        android:layout_height="162dp"
        android:layout_marginTop="252dp"
        android:text="@string/goals_stats"
        android:textAllCaps="true"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/viewKonfetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>